Introduce views::Widget::ReparentNativeWindow()

NativeWebContentsModalDialogManagerViews controls the WebModal
dialogs and use ReparentNativeView() to move the dialog to a new
browser window when the tab is dragged to a new browser window.
In this case, the dialog window need to be Re-parented to the
new browser window instead the dialog widget's native view is
Re-parented to the native view of the new browser window.
Use ReparentNativeWindow() instead of ReparentNativeView() because
NativeWindow is different to NativeView on Mac.

Bug: 755102
Change-Id: Id9de473765807a11c787e4e51994b6cb5c13ddee